lab1/Test/L1-A-13-74.output
Error Type A at Line 10
Error Type B at Line 26
Error Type A at Line 41
Error Type A at Line 45
Error Type B at Line 60
Error Type A at Line 70
Error Type B at Line 75
